fixed TaskCards not showing up

--- a/frontend/src/app/(components)/taskcard.module.scss
+++ b/frontend/src/app/(components)/taskcard.module.scss
@@ -25,6 +25,8 @@
 
 .icons {
     display: flex;
+    flex-direction: column;
+    margin: auto;
     gap: 10px;
 
     button {
